Finally getting it

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <link href="./assets/css/style.css" rel="stylesheet">
   <script type="text/javascript" src="./assets/js/utils.js"></script>
-  <script type="text/javascript" src="./assets/js/numbers.js"></script>
+  <script type="text/javascript" src="./assets/js/pronunciation-dictionary.js"></script>
   <script type="text/javascript" src="./assets/js/header-functions.js"></script>
 
 </head> <!-- header ends here -->
